--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <button class="btn-new">
                 New game
             </button>
-            <img  src="/images/dice1.png" alt="Dice" class="dice">
+            <img  src="images/dice1.png" alt="Dice" class="dice">
             <button class="btn-roll">Roll Dice</button>
             <button class="btn-hold">Hold</button>
     </div>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
     </html>
