--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buyka's basic style</title>
-    <link rel="stylesheet" href="CSS/normalize.css">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/scrollbar.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body >
     <!-- <header>
@@ -33,10 +31,10 @@
             <button class="btn-new">
                 New game
             </button>
-            <img  src="images/dice1.png" alt="Dice" class="dice">
+            <img  src="dice1.png" alt="Dice" class="dice">
             <button class="btn-roll">Roll Dice</button>
             <button class="btn-hold">Hold</button>
     </div>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
     </html>
