--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
             <button class="btn-new">
-                New game22
+                New game
             </button>
             <img  src="dice1.png" alt="Dice" class="dice">
             <button class="btn-roll">Roll Dice</button>
